Adding all files of sample application 9/10/23

--- a/Vocation_Booking/index.html
+++ b/Vocation_Booking/index.html
@@ -35,6 +35,98 @@
       <a href="#">Gallaery</a>
       <a href="#">Contact</a>
     </nav>
+
+    <section class="holiday-section">
+      <h1 class="holiday-heading">Enjoy the festival.</h1>
+      <p class="holiday-text">
+        Enjoying Holiday is very most special experience to all of us, to keep
+        our mind fresh and calm. <br />It helps us to recreate and regenerate us
+        to be in a positive way. So spend some quaterly in a month and keep
+        upgrading urself...
+      </p>
+    </section>
+    <button class="button">Book Now</button>
+
+    <section class="places-to-visit">
+      <h1 class="holiday-heading">Places to Visit...</h1>
+      <p class="holiday-text">
+        Nellore is the best place for relaxing and keep calming nature. <br />
+        In nellore we can see lot of historical temples,musiems, lot of
+        greenfields and its city develpment.<br />
+        We have Krishnapatnam port which is the south area largest port for
+        marketing trading exports and imports..
+      </p>
+
+      <div class="places-div">
+        <p>Bird sanctuary..</p>
+
+        <img src="Images1/birdssanctuary.jpg" src="Images found" />
+        <img src="Images1/birdssanctuary.jpg" src="Images found" />
+        <img src="Images1/birdssanctuary.jpg" src="Images found" />
+        <img src="Images1/birdssanctuary.jpg" src="Images found" />
+        <img src="Images1/templesnew.jpg" src="Images found" />
+        <img src="Images1/birdssanctuary.jpg" src="Images found" />
+      </div>
+    </section>
+
+    <!------- Packages section....   -->
+
+    <section class="Packages_section">
+      <h1 class="holiday-heading">Our Packages</h1>
+      <p class="holiday-text">
+        Our packages are upto the standarda and feel comfortable price,
+        <br />
+        It is the best price in india every body can able pay the amount and can
+        be able to travel,,,,
+      </p>
+
+      <div class="package-wrapper">
+        <div class="package-card">
+          <img src="./Images1/ranganadha swamy Images.jpg" />
+          <p class="card-heading">RanganadhaSwamyTemple</p>
+          <p class="card-text">
+            Nellore is the best place to explore the city in the andhra pradesh.
+          </p>
+          <p class="card-heading">Price : 50,0000</p>
+          <button class="btn1">Book Now</button>
+        </div>
+
+        <div class="package-card">
+          <img src="./Images1/ranganadha swamy Images.jpg" />
+          <p class="card-heading">RanganadhaSwamyTemple</p>
+          <p class="card-text">
+            Nellore is the best place to explore the city in the andhra pradesh.
+          </p>
+          <p class="card-heading">Price : 50,0000</p>
+          <button class="btn2">Book Now</button>
+        </div>
+
+        <div class="package-card">
+          <img src="./Images1/ranganadha swamy Images.jpg" />
+          <p class="card-heading">RanganadhaSwamyTemple</p>
+          <p class="card-text">
+            Nellore is the best place to explore the city in the andhra pradesh.
+          </p>
+          <p class="card-heading">Price : 50,0000</p>
+          <button class="btn3">Book Now</button>
+        </div>
+      </div>
+    </section>
+
+    <!----- Footer section ---- -->
+
+    <footer class="footer-section">
+      <small>All Rights are Reserved.</small><br />
+      <small
+        >Developed and Maintained By
+        <a
+          target="_blank"
+          href="https://github.com/vickydeveloper123/SpringBootWithMicroservices/blob/master/RestfullAPIDB/src/main/java/com/restapi/RestfullAPIDB/controller/UserController.java"
+          >Dora Sri Vignesh</a
+        >
+      </small>
+    </footer>
+
     <div style="margin-bottom: 1500px"></div>
   </body>
 </html>
